2000-01-14  Dominik Vogt  <dominik.vogt@gmx.de>

	* FvwmIconMan/xmanager.c:
	fixed title changes on 'transparent' buttons

2000-01-12  Dominik Vogt  <dominik.vogt@gmx.de>

	* FvwmIconMan/xmanager.c:
	don't draw empty titles oon empty managers
	(clear_empty_region):
	(draw_button):
	icon man honours transparent colour set backgrounds

	* FvwmPager/FvwmPager.c (list_new_desk):
	* FvwmPager/x_pager.c:
	make pager work with FvwmTheme's 'Transparent' option

2000-01-09  Dominik Vogt  <dominik.vogt@gmx.de>

	* FvwmTheme/FvwmTheme.c:
	new option 'Transparent'

	* FvwmButtons/FvwmButtons.c (HandlePanelPress):
	(GetPanelGeometry):
	removed previous configure request patch

2000-01-08  Dan Espen  <dane@mk.telcordia.com>

	* FvwmScript/FvwmScript.1 (example): Clean up.

2000-01-07  Dominik Vogt  <dominik.vogt@gmx.de>

	* FvwmButtons/FvwmButtons.c (GetPanelGeometry):
	(HandlePanelPress):
	adapted to new fvwm ConfigureRequest code

2000-01-06  Chris Rankin  <rankinc@zipworld.com.au>

	* FvwmAuto/FvwmAuto.c: Upgraded signal handling to use fvwmsignal.o

2000-01-04  Dan Espen  <dane@mk.telcordia.com>

	* FvwmForm/FvwmForm.1: Document means of passing closing paren
	thru in a command string.

	* FvwmForm/ParseCommand.c (ParseCommand): Provide a means to pass
	a closing paren thru in a command.

2000-01-04  olicha <olivier.chapuis@free.fr>

	* FvwmScript/Scripts/ScriptFvwmQuit
	Fixed restart in ScriptFvwmQuit

2000-01-04  Dominik Vogt  <dominik.vogt@gmx.de>

	* FvwmIconMan/x.c (X_init_manager):
	allow the buttongeometry option to reduce the button height to a
	minimum of the font height

2000-01-04  olicha <olivier.chapuis@free.fr>

	* FvwmScript/Scripts/ScriptFvwmDefaultStyle:
	* FvwmScript/Scripts/ScriptFvwmBaseConfig:
	* FvwmScript/FvwmScript.1 (EXAMPLES):
	Renamed DefaultStyle to BaseConfig. BaseConfig save its
	preferences in .FvwmBaseConfig or in a file given as first
	argument to the script. Others, "ameliorations"

2000-01-03  olicha <olivier.chapuis@free.fr>
