@@ -1,5 +1,8 @@
 2000-01-14  Dominik Vogt  <dominik.vogt@gmx.de>
 
+	* FvwmTheme/FvwmTheme.c (parse_colorset):
+	fixed coredump using 'average' background as well as 'transparent'
+
 	* FvwmIconMan/xmanager.c:
 	fixed title changes on 'transparent' buttons
 
